tests/agl/rejections/type/fn_type_mismatch.agl
def dbl(n: int) -> int = n * 2
let g: (int) -> text = dbl
g
